--- a/you-mi-dependencies/pom.xml
+++ b/you-mi-dependencies/pom.xml
@@ -12,6 +12,8 @@
     <properties>
         <revision>1.0-SNAPSHOT</revision>
         <fastjson.version>1.2.83</fastjson.version>
+        <mysql.version>8.0.33</mysql.version>
+        <mybatis.version>3.0.3</mybatis.version>
     </properties>
 
     <dependencyManagement>
@@ -32,6 +34,19 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
+            </dependency>
+
+            <!-- MySQL数据库-->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+            <!-- mybatis-->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
