--- a/you-mi-system/pom.xml
+++ b/you-mi-system/pom.xml
@@ -27,10 +27,10 @@
             <artifactId>you-mi-framework</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>com.hql</groupId>
-            <artifactId>you-mi-ai</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.hql</groupId>-->
+<!--            <artifactId>you-mi-ai</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
