--- a/you-mi-system/pom.xml
+++ b/you-mi-system/pom.xml
@@ -19,10 +19,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.hql</groupId>
             <artifactId>you-mi-framework</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -33,4 +29,20 @@
 <!--            <version>1.0-SNAPSHOT</version>-->
 <!--        </dependency>-->
     </dependencies>
+
+<!--    <build>-->
+<!--        <resources>-->
+<!--            <resource>-->
+<!--                <directory>src/main/resources</directory>-->
+<!--                <filtering>true</filtering>-->
+<!--            </resource>-->
+<!--            <resource>-->
+<!--                <directory>src/main/java</directory>-->
+<!--                <includes>-->
+<!--                    <include>**/*.xml</include>-->
+<!--                </includes>-->
+<!--            </resource>-->
+<!--        </resources>-->
+
+<!--    </build>-->
 </project>
