--- a/you-mi-system/src/main/resources/application-dev.yaml
+++ b/you-mi-system/src/main/resources/application-dev.yaml
@@ -1,5 +1,10 @@
 spring:
   application:
     name: you-mi-system
+  data:
+    redis:
+      port: 6379
+      host: localhost
 server:
   port: 8081
+
